adiciona config para virtual threads