@@ -14,7 +14,7 @@
 	<name>reactive-game-service</name>
 	<description>microsserviço game service reativo</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>19</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -39,6 +39,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>19</source>
+					<target>19</target>
+					<compilerArgs>
+						--enable-preview
+					</compilerArgs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
